# app/Models/Task.php
@@ -1,85 +1,0 @@
-<?php
-
-namespace App\Models;
-
-use Eloquent as Model;
-use Illuminate\Database\Eloquent\SoftDeletes;
-
-/**
- * @SWG\Definition(
- *      definition="Task",
- *      required={"value", "user_id"},
- *      @SWG\Property(
- *          property="value",
- *          description="value",
- *          type="string"
- *      ),
- *      @SWG\Property(
- *          property="user_id",
- *          description="user_id",
- *          type="integer",
- *          format="int32"
- *      ),
- *      @SWG\Property(
- *          property="completed",
- *          description="completed",
- *          type="boolean"
- *      ),
- *      @SWG\Property(
- *          property="created_at",
- *          description="created_at",
- *          type="string",
- *          format="date-time"
- *      ),
- *      @SWG\Property(
- *          property="updated_at",
- *          description="updated_at",
- *          type="string",
- *          format="date-time"
- *      )
- * )
- */
-class Task extends Model
-{
-    use SoftDeletes;
-
-    public $table = 'tasks';
-    
-
-    protected $dates = ['deleted_at'];
-
-
-    public $fillable = [
-        'value',
-        'completed'
-    ];
-
-    /**
-     * The attributes that should be casted to native types.
-     *
-     * @var array
-     */
-    protected $casts = [
-        'value' => 'string',
-        'user_id' => 'integer',
-        'completed' => 'boolean'
-    ];
-
-    /**
-     * Validation rules
-     *
-     * @var array
-     */
-    public static $rules = [
-        'value' => 'required',
-        'user_id' => 'required'
-    ];
-
-    /**
-     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo
-     **/
-    public function user()
-    {
-        return $this->belongsTo(\App\Models\User::class);
-    }
-}
